<resources>
    <string name="app_name">Classy Notes</string>

    <string name="my_notes">Classy Notes</string>
    <string name="search_notes">Search notes</string>
    <string name="title">Title</string>
    <string name="sub_title">Sub Title</string>
    <string name="type_description_here">Type description here…</string>
    <string name="pick_color">Pick Color</string>
    <string name="add_image">Add Image</string>
    <string name="add_url">Add URL</string>
    <string name="enter_url">Enter URL</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="are_you_sure_you_want_to_delete_this_note">Are you sure you want to delete this note?</string>
    <string name="delete_note">Delete Note</string>
    <string name="to_do">TO-DO</string>
    <string name="to_do_reminders">TO-DO Reminders</string>
    <string name="remind_me">Remind Me</string>
    <string name="reminder_details">Reminder Details</string>

    <string name="no_cardetails">Click on the button below to begin creating your reminder!</string>
    <string name="title_activity_add_reminder">Add Reminder</string>
    <string name="title_activity_edit_reminder">Edit Reminder</string>
    <string name="title_activity_licenses">Licenses</string>

    <string name="add_reminder">Reminder</string>
    <string name="details">Details</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="repeat">Repeat</string>
    <string name="repeat_off">Off</string>
    <string name="repeat_no">Repetition Interval </string>
    <string name="repeat_type">Type of Repetitions</string>

    <string name="action_discard_reminder">Discard Reminder</string>
    <string name="action_save_reminder">Save Reminder</string>

    <string name="editor_activity_title_new_reminder">Add Reminder Details</string>
    <string name="editor_activity_title_edit_reminder">Edit Reminder</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>

    <string name="keep_editing">Keep Editing</string>
    <string name="delete_dialog_msg">Delete this Reminder?</string>

    <string name="delete">Delete</string>


    <string name="editor_delete_reminder_successful">Reminder deleted</string>

    <string name="editor_delete_reminder_failed">Error with deleting reminder</string>

    <string name="editor_insert_reminder_successful">Reminder saved</string>

    <string name="editor_insert_reminder_failed">Error with saving reminder</string>

    <string name="editor_update_reminder_successful">Reminder updated</string>

    <string name="editor_update_reminder_failed">Error with updating reminder</string>

    <string name="reminder_title">AlarmReminder</string>
    <string name="add_reminder_title">Add Reminder Title</string>
    <string name="notes">Notes</string>
    <string name="lists">Lists</string>
    <string name="classy_inc">From Classy Inc</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="income_and_expense_tracker">Income and Expense Tracker</string>
    <string name="classy_fam">Classy Fam</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="share">Share</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="connect_with_us">Connect with us</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <string name="Settings">Settings</string>
    <string name="other_apps_from_classy_inc">Other apps from Classy Inc</string>
    <string name="ad">Ad</string>
    <string name="income_and_expense_tracker_app">Income and Expense Tracker app</string>
    <string name="sponsored">Sponsored</string>
    <string name="classy_inc1">Classy Inc</string>
    <string name="find_your_spending_leaks">Find Your Spending Leaks</string>
    <string name="by_clicking_the_install_button_you_will_be_directed_to_google_playstore">By clicking the install button you will be directed to google playstore</string>
    <string name="install_now">INSTALL NOW</string>

</resources>