<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_addurlContainer_id"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="@dimen/_10sdp"
    android:background="@drawable/background_dialog">

    <ImageView
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_25sdp"
        android:id="@+id/imageAddURl_id"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_language"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/ColorWhite" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:fontFamily="@font/ubuntu_bold"
        android:includeFontPadding="false"
        android:text="@string/add_url"
        android:textColor="@color/ColorWhite"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintBottom_toBottomOf="@+id/imageAddURl_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageAddURl_id"
        app:layout_constraintTop_toTopOf="@id/imageAddURl_id"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:id="@+id/inputUrl_id"
        android:background="@null"
        android:fontFamily="@font/ubuntu_regular"
        android:gravity="center_vertical"
        android:hint="@string/enter_url"
        android:textColor="@color/ColorWhite"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:includeFontPadding="false"
        android:inputType="textUri"
        android:textColorHint="@color/ColorTextInput"
        android:textSize="@dimen/_13ssp"
        android:paddingStart="@dimen/_8sdp"
        android:paddingEnd="@dimen/_8sdp"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        app:layout_constraintTop_toBottomOf="@+id/imageAddURl_id"
        android:maxLength="150"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textAdd_id"
        android:text="@string/add"
        android:layout_marginEnd="@dimen/_8sdp"
        android:layout_marginBottom="@dimen/_8sdp"
        android:fontFamily="@font/ubuntu_medium"
        android:includeFontPadding="false"
        android:padding="@dimen/_8sdp"
        android:textSize="@dimen/_13ssp"
        android:textColor="@color/ColorNote4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputUrl_id"
        />

    <TextView
        android:id="@+id/textCancel_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_8sdp"
        android:layout_marginBottom="@dimen/_8sdp"
        android:fontFamily="@font/ubuntu_medium"
        android:includeFontPadding="false"
        android:padding="@dimen/_8sdp"
        android:text="@string/cancel"
        android:textColor="@color/ColorDelete"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textAdd_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputUrl_id"
        />


</androidx.constraintlayout.widget.ConstraintLayout>